:tada: Ajout de composants

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,7 @@
   --container-9\/10: 90%;
   --container-8\/10: 80%;
 
+
   @keyframes heart {
     0% {
       transform: scale(0.9);
@@ -36,7 +37,18 @@
       transform: scale(0.9);
     }
   }
+
+  
 }
+
+ @keyframes background-position-spin {
+    0% {
+      background-position: top center;
+    }
+    100% {
+      background-position: bottom center;
+    }
+  }
 
 @layer base {
   *,
@@ -53,6 +65,7 @@
 
 @theme inline {
   --animate-shine: shine var(--duration) infinite linear;
+  --animate-background-position-spin: background-position-spin 3000ms infinite alternate;
 
   @keyframes shine {
     0% {
@@ -86,5 +99,5 @@ a {
 
 body {
   background-color: #060010;
-  /* overflow-y: hidden; */
+ overflow-x: hidden;
 }
